--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,5 @@
 ---------------------------------------------------------------------------------------------------
-Version: 0.0.1
+Version: 0.69.1
 Date: ????
   Changes:
-    - First version.
+    - First public version.
