--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,10 @@
 ---------------------------------------------------------------------------------------------------
-Version: 0.69.1
+Version: 0.69.2
 Date: ????
+  Changes:
+    - Removed space age required tag.
+---------------------------------------------------------------------------------------------------
+Version: 0.69.1
+Date: 2025-06-20
   Changes:
     - First public version.
