--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.2
-Date: ????
+Date: 2025-06-20
   Changes:
     - Removed space age required tag.
 ---------------------------------------------------------------------------------------------------
