--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.69.3
+Date: ????
+  Changes:
+---------------------------------------------------------------------------------------------------
 Version: 0.69.2
 Date: 2025-06-20
   Changes:
