--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 Version: 0.69.3
 Date: ????
   Changes:
+    - Fixed Crash
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.2
 Date: 2025-06-20
