--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.3
-Date: ????
+Date: 2025-06-21
   Changes:
     - Fixed Crash
 ---------------------------------------------------------------------------------------------------
