--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.5
-Date: ????
+Date: 2025-06-21
   Changes:
     - Fixed issues with mods that would dynamically create/delete/merge forces. Also more robust multiplayer.
 ---------------------------------------------------------------------------------------------------
