preparing release of version 0.69.6

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.6
-Date: ????
+Date: 2025-06-21
   Changes:
     - Fixed bug where inserters could get stuck targetting the invisible beacons.
 ---------------------------------------------------------------------------------------------------
