--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 Version: 0.69.8
 Date: ????
   Changes:
+    - Bugfix with autosearching machines by crafting category.
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.7
 Date: 2025-06-22
