--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.8
-Date: ????
+Date: 2025-07-04
   Changes:
     - Bugfix with autosearching machines by crafting category.
 ---------------------------------------------------------------------------------------------------
