--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.69.9
+Date: ????
+  Changes:
+---------------------------------------------------------------------------------------------------
 Version: 0.69.8
 Date: 2025-07-04
   Changes:
