--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.69.11
+Date: ????
+  Changes:
+---------------------------------------------------------------------------------------------------
 Version: 0.69.10
 Date: 2025-07-08
   Changes:
