preparing release of version 0.69.11

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.11
-Date: ????
+Date: 2025-07-11
   Changes:
     - Fixed incompatibility with "Everything has Quality"
 ---------------------------------------------------------------------------------------------------
