More error logging. Fixed compat with Adjustable quality.

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 Version: 0.69.12
 Date: ????
   Changes:
+    - Fixed a crash from Adjustable Quality.
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.11
 Date: 2025-07-11
