--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.12
-Date: ????
+Date: 2025-07-20
   Changes:
     - Fixed a crash from Adjustable Quality.
 ---------------------------------------------------------------------------------------------------
