--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.13
-Date: ????
+Date: 2025-08-18
   Changes:
     - Added more diagnostics and error reporting for cases where OTHER mods cause mupgrades to crash. Mostly so you stop reporting to me bugs that I have nothing to do with.
     - Added an emergency failsafe to totally disable the mod in the event that people have horrible nonstop crashes.
