--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.69.14
+Date: ????
+  Changes:
+---------------------------------------------------------------------------------------------------
 Version: 0.69.13
 Date: 2025-08-18
   Changes:
