preparing release of version 0.69.14

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.14
-Date: ????
+Date: 2025-09-12
   Changes:
     - Added compatibility with cloning via map editor
 ---------------------------------------------------------------------------------------------------
