--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 Version: 0.69.15
 Date: ????
   Changes:
+    - Fixed bugs from invisible beacons being targetted by module upgrade planners.
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.14
 Date: 2025-09-12
