preparing release of version 0.69.15

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.15
-Date: ????
+Date: 2025-10-21
   Changes:
     - Fixed bugs from invisible beacons being targetted by module upgrade planners.
 ---------------------------------------------------------------------------------------------------
