--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.69.16
+Date: ????
+  Changes:
+---------------------------------------------------------------------------------------------------
 Version: 0.69.15
 Date: 2025-10-21
   Changes:
