preparing release of version 0.69.16

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.16
-Date: ????
+Date: 2025-10-21
   Changes:
     - Re-fix the upgrade planner bug.
 ---------------------------------------------------------------------------------------------------
