--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 Version: 0.69.17
 Date: ????
   Changes:
+    - Hid accidentally exposed data.
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.16
 Date: 2025-10-21
