preparing release of version 0.69.17

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.17
-Date: ????
+Date: 2025-11-10
   Changes:
     - Hid accidentally exposed data.
 ---------------------------------------------------------------------------------------------------
