--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,8 @@
 Version: 0.69.18
 Date: ????
   Changes:
+    - Fix crash for forces being merged.
+    - Fix incompatibility with voidcraft
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.17
 Date: 2025-11-10
