--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.19
-Date: ????
+Date: 2025-11-25
   Changes:
     - Fix incompatibility with beacon interfaces mod.
 ---------------------------------------------------------------------------------------------------
